Untitled_Project/src/components/PopupMenu.module.css
@import '../vars.css';

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: absolute;
    align-self: center;
    border-radius: 15px;
    background: radial-gradient(circle at bottom left, var(--richblack), #0e0e1a, var(--richblack));
    box-shadow: -5px 10px 10px #eee5e50e; 
    z-index: 100;
  }

  .head{
    color: var(--smokewhite);
    text-shadow: var(--darkblue) -1px 1px 2px;
    font-family: "Alegreya Sans SC", sans-serif;
    
}
  
  .loginlist,
  .signuplist {
    list-style: none;
    padding: 0;
    text-align: center;
  }
  
  .loginlist li,
  .signuplist li {
    margin-top: 20px;
    color: var(--soft-grey);
    margin-bottom: 15px;
    text-shadow: var(--richblack) -1px 1px 2px;

  }
  
  .loginlist label,
  .signuplist label {
    display: block;
    margin-bottom: 5px;
    color: var(--lightwhite);
    font-weight: 600;
    font-size: smaller;
  }
  
  .loginlist input,
  .signuplist input {
    width: 200px; 
    padding: 8px;
  }

  .btnwrap{
    display: flex;
    flex-direction: row;
    margin-bottom: 4%;
    
  }

  .btn{
  padding: 2%;
  margin: auto;
  width: 85px;
  color:var(--lightwhite);
  background-color: var(--darkblue);
  border: 2px solid #16162c;
  box-shadow: 0 2px 5px var(--richblack);
  text-shadow: var(--richblack) -1px 1px 2px;
  font-weight: 500;
  }

  .login{
    max-height: 20em;
    padding: 1em;
  }
  .signup {
    
    max-height: 29em;
    padding: 1em;
}

.input{
    border-radius: 8px;
    background: linear-gradient(to top, var(--smokewhite), var(--lightwhite) 50%);
    color: var(--richblack);
    outline: none;
}

.input::placeholder{
  color: #333030;
}

input:focus{
  border: 3px solid var(--darkblue);
}

.inputError{
  border: 3px solid var(--deepred);
}

.error{
  color: var(--deepred);
  font-size: smaller;
  font-weight: 600;
  text-shadow: none;
  margin-top: 5px;

}

@media(max-width:767px){
  .container{
    position: absolute;
  }
}

